fix(blur): blur effect on Safari. 修改了 Prefix，自动增加 -webkit- 前缀的模糊滤镜；增加了 -webkit- 支持的媒体查询 其实这两件事情应该只做一件的，，

--- a/source/css/_first/base_first.styl
+++ b/source/css/_first/base_first.styl
@@ -108,7 +108,11 @@ button
 
 .blur
   @supports (backdrop-filter: blur(20px))
-    background: alpha($color-card, .9) !important
+    background: alpha($color-card, .8) !important
+    backdrop-filter: saturate(200%) blur(20px)
+  // * 试试看，只改了这一处；其他地方可以再改
+  @supports (-webkit-backdrop-filter: blur(20px))   
+    background: alpha($color-card, .7) !important
     backdrop-filter: saturate(200%) blur(20px)
 
 if hexo-config('comments.service')=='discuss' || hexo-config('comments.service')=='twikoo' || hexo-config('comments.service')=='waline'
